--- a/3index.html
+++ b/3index.html
@@ -7,6 +7,8 @@
     <script src="https://hypothes.is/embed.js" async></script>
   </head>
   <body>
+   Hello, World! <br>
+    annotations
     
 
   </body>
