--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
    Hello, World! <br>
-    annotations
+    The other Negroes having been alsways slaves, submit to their new masters willingly enough, when they know how they are to be employed.
+    <br> At first indeed they are under great terrors of being eat by the white people, and so strong have the apprehensions of many of them
+    being upon their arrival,
+    <br> that no entreaties could prevail on them to take any suference, lest they should become fat and fitter for 
+    our food,
+    <br> untill some of their countrymen who had resided sometime in the 
     
 
   </body>
