--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     being upon their arrival,
     <br> that no entreaties could prevail on them to take any suference, lest they should become fat and fitter for 
     our food,
-    <br> untill some of their countrymen who had resided sometime in the 
+    <br> untill some of their countrymen who had resided sometime in the colony were brought to them, and convinced them of the folly of their suspicions.
     
 
   </body>
