--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     The other Negroes having been alsways slaves, submit to their new masters willingly enough, when they know how they are to be employed.
     At first indeed they are under great terrors of being eat by the white people, and so strong have the apprehensions of many of them
     being upon their arrival,
-    that no entreaties could prevail on them to take any suference, lest they should become fat and fitter for 
+    that no entreaties could prevail on them to take any sustainance, lest they should become fat and fitter for 
     our food,
     untill some of their countrymen who had resided sometime in the colony were brought to them, and convinced them of the folly of their suspicions.
-    
+    <br>
+    Annotations
+    <br>
+    <p> There is a perceptual tension in the minds of new slaves upon seeing other slaves who have never known freedom. New slaves refuse to submit to their masters as the old slaves do withut a second thought. </p>
+    <p> New slaevs are terrified of their new masters, and the new slaves refuse food to keep them safe from being eaten. </p>
+    <p> </p>
 
   </body>
 
