--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     that no entreaties could prevail on them to take any sustenance, lest they should become fat and fitter for 
     our food,
     until some of their countrymen who had resided sometime in the colony were brought to them, and convinced them of the folly of their suspicions.
-    
+    <br>
+    If the reverend members of Society should be of opinion that this trade is contrary to divine laws, it will surely be proper to apply to government for an act of parliament to prohibit it, and at the same time to apply for lands to be given to such Negroes as their masters, influenced by that opinion, may relate from servitude; for such will be its effect upon many of the North American planters.
     
   </body>
 
