--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     our food,
     until some of their countrymen who had resided sometime in the colony were brought to them, and convinced them of the folly of their suspicions.
     <br>
-    If the reverend members of Society should be of opinion that this trade is contrary to divine laws, it will surely be proper to apply to government for an act of parliament to prohibit it, and at the same time to apply for lands to be given to such Negroes as their masters, influenced by that opinion, may relate from servitude; for such will be its effect upon many of the North American planters.
+    If the reverend members of Society should be of opinion that this trade is contrary to divine laws, it will surely be proper to apply to government for an act of parliament to prohibit it, and at the same time to apply for lands to be given to such Negroes as their masters, influenced by that opinion, may relate from servitude; for such will be its effect upon many of the North American planterd. But if on the contrary the opinion should be, that the trade is not a violation of the divine laws, it wil be highly proper to transmit that opinion to the colonies, as well as to to encourage them to give their Negroes instruction, thereby to avail themselve of such authority for making them contend with their condition.
     
   </body>
 
