--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     until some of their countrymen who had resided sometime in the colony were brought to them, and convinced them of the folly of their suspicions.
     <br>
     If the reverend members of Society should be of opinion that this trade is contrary to divine laws, it will surely be proper to apply to government for an act of parliament to prohibit it, and at the same time to apply for lands to be given to such Negroes as their masters, influenced by that opinion, may relate from servitude; for such will be its effect upon many of the North American planterd. But if on the contrary the opinion should be, that the trade is not a violation of the divine laws, it wil be highly proper to transmit that opinion to the colonies, as well as to to encourage them to give their Negroes instruction, thereby to avail themselve of such authority for making them contend with their condition.
-    
+    <p>
+      No planter is so grossly barbarous as not to wish to have his Negroes do his work with a good will; and very few would be so brutal or ignorant as not to perceive, that were their Negroes influenced in religion, and taught to serve their masters for 
+confidence sake, that they would be much beter served by them; but it is surely the height of folly to expect of any owner of Negroes to ermit them to be told, that he violates all divine and human laws by retaining them in his service, or to allow them to have any notions of a religion, whole sanctions he must appear to them to condemn, by making them his slaves.
+
+    </p>
   </body>
 
 </html>
